tests/fixtures/invalid/abs_set.py
# Cannot call abs() with Set[int]
x = abs({1, 2, 3})
